wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: cka
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31234
  selector:
    app: wordpress
